k3s/apps/actual/actual.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: actual
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      enableServiceLinks: false
      containers:
        - name: actual
          image: actualbudget/actual-server:26.9.0
          ports:
            - containerPort: 5006
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-data
